// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feature detail — head tag snapshots > agent-mode matches snapshot and has no duplicate canonicals or root overrides 1`] = `
{
  "canonical": "https://atlas.dahlingdigital.com/features/agent-mode",
  "canonicalCount": 1,
  "description": "Autonomous, end-to-end execution mode. Agent Mode takes ownership of a task end-to-end — understands intent, explores the codebase, applies changes…",
  "jsonLdTypes": [
    "",
    "FAQPage",
    "TechArticle",
  ],
  "og": {
    "og:description": "Autonomous, end-to-end execution mode. Agent Mode takes ownership of a task end-to-end — understands intent, explores the codebase, applies changes…",
    "og:image": "https://atlas.dahlingdigital.com/og/features/agent-mode.png",
    "og:image:alt": "Agent Mode — Autonomous, end-to-end execution mode.",
    "og:image:height": "1024",
    "og:image:width": "1536",
    "og:site_name": "The Lovable Feature Atlas",
    "og:title": "Agent Mode — Lovable Feature Atlas",
    "og:type": "article",
    "og:url": "https://atlas.dahlingdigital.com/features/agent-mode",
  },
  "robots": null,
  "techArticle": {
    "@context": "https://schema.org",
    "@type": "TechArticle",
    "datePublished": "2025-02-11",
    "headline": "Agent Mode",
    "mainEntityOfPage": "https://atlas.dahlingdigital.com/features/agent-mode",
    "url": "https://atlas.dahlingdigital.com/features/agent-mode",
  },
  "title": "Agent Mode — Lovable Feature Atlas",
  "twitter": {
    "twitter:card": "summary_large_image",
    "twitter:description": "Autonomous, end-to-end execution mode. Agent Mode takes ownership of a task end-to-end — understands intent, explores the codebase, applies changes…",
    "twitter:image": "https://atlas.dahlingdigital.com/og/features/agent-mode.png",
    "twitter:image:alt": "Agent Mode — Autonomous, end-to-end execution mode.",
    "twitter:title": "Agent Mode — Lovable Feature Atlas",
    "twitter:url": "https://atlas.dahlingdigital.com/features/agent-mode",
  },
}
`;

exports[`feature detail — head tag snapshots > gemini-3-pro matches snapshot and has no duplicate canonicals or root overrides 1`] = `
{
  "canonical": "https://atlas.dahlingdigital.com/features/gemini-3-pro",
  "canonicalCount": 1,
  "description": "Gemini 3 Pro model support. Gemini 3 Pro support was added in the Nov 26, 2025 release for higher-quality Google-model builds.",
  "jsonLdTypes": [
    "",
    "FAQPage",
    "TechArticle",
  ],
  "og": {
    "og:description": "Gemini 3 Pro model support. Gemini 3 Pro support was added in the Nov 26, 2025 release for higher-quality Google-model builds.",
    "og:image": "https://atlas.dahlingdigital.com/og/features/gemini-3-pro.png",
    "og:image:alt": "Gemini 3 Pro — Gemini 3 Pro model support.",
    "og:image:height": "1024",
    "og:image:width": "1536",
    "og:site_name": "The Lovable Feature Atlas",
    "og:title": "Gemini 3 Pro — Lovable Feature Atlas",
    "og:type": "article",
    "og:url": "https://atlas.dahlingdigital.com/features/gemini-3-pro",
  },
  "robots": null,
  "techArticle": {
    "@context": "https://schema.org",
    "@type": "TechArticle",
    "datePublished": "2025-11-26",
    "headline": "Gemini 3 Pro",
    "mainEntityOfPage": "https://atlas.dahlingdigital.com/features/gemini-3-pro",
    "url": "https://atlas.dahlingdigital.com/features/gemini-3-pro",
  },
  "title": "Gemini 3 Pro — Lovable Feature Atlas",
  "twitter": {
    "twitter:card": "summary_large_image",
    "twitter:description": "Gemini 3 Pro model support. Gemini 3 Pro support was added in the Nov 26, 2025 release for higher-quality Google-model builds.",
    "twitter:image": "https://atlas.dahlingdigital.com/og/features/gemini-3-pro.png",
    "twitter:image:alt": "Gemini 3 Pro — Gemini 3 Pro model support.",
    "twitter:title": "Gemini 3 Pro — Lovable Feature Atlas",
    "twitter:url": "https://atlas.dahlingdigital.com/features/gemini-3-pro",
  },
}
`;

exports[`feature detail — head tag snapshots > plan-mode matches snapshot and has no duplicate canonicals or root overrides 1`] = `
{
  "canonical": "https://atlas.dahlingdigital.com/features/plan-mode",
  "canonicalCount": 1,
  "description": "Brainstorm and design before any code is written. Plan Mode is Lovable&#x27;s planning and reasoning mode.",
  "jsonLdTypes": [
    "",
    "FAQPage",
    "TechArticle",
  ],
  "og": {
    "og:description": "Brainstorm and design before any code is written. Plan Mode is Lovable&#x27;s planning and reasoning mode.",
    "og:image": "https://atlas.dahlingdigital.com/og/features/plan-mode.png",
    "og:image:alt": "Plan Mode — Brainstorm and design before any code is written.",
    "og:image:height": "1024",
    "og:image:width": "1536",
    "og:site_name": "The Lovable Feature Atlas",
    "og:title": "Plan Mode — Lovable Feature Atlas",
    "og:type": "article",
    "og:url": "https://atlas.dahlingdigital.com/features/plan-mode",
  },
  "robots": null,
  "techArticle": {
    "@context": "https://schema.org",
    "@type": "TechArticle",
    "datePublished": "2026-02-05",
    "headline": "Plan Mode",
    "mainEntityOfPage": "https://atlas.dahlingdigital.com/features/plan-mode",
    "url": "https://atlas.dahlingdigital.com/features/plan-mode",
  },
  "title": "Plan Mode — Lovable Feature Atlas",
  "twitter": {
    "twitter:card": "summary_large_image",
    "twitter:description": "Brainstorm and design before any code is written. Plan Mode is Lovable&#x27;s planning and reasoning mode.",
    "twitter:image": "https://atlas.dahlingdigital.com/og/features/plan-mode.png",
    "twitter:image:alt": "Plan Mode — Brainstorm and design before any code is written.",
    "twitter:title": "Plan Mode — Lovable Feature Atlas",
    "twitter:url": "https://atlas.dahlingdigital.com/features/plan-mode",
  },
}
`;
